# pi-node

./: .deepsource.toml  .env  .gitignore  13732080678  13933089910  192.168.0.5  192.168.1.231README.md  19567964717  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  README.md  SECURITY.md  database.js  dynamicPegging.js  frpc.ini  package.json  pi-node  pi_node_sync.py  requirements.txt  security.js  tailwind.config.js  validators.js  余霞
15268053224/: pi-node
15907951777/: pi-node
ai/: ai-code-integrity.js  ai-predictive-maintenance.js  ai-self-audit.js
ai_models/: __init__.py  data_loader.py  deep_learning.py  machine_learning.py  neural_network.py  nlp_utils.py  object_detection.py  rl_models.py  seq2seq.py  transformers.py  vision_models.py
ai_optimizer/: init.py  node_profiler.py  optimizer.py  predictive_model.py  resource_allocator.py
ai_trading_bot/: bot.js
ares/: README.md  ares_core.js  code_analyzer.js  code_generator.js  integration_engine.js  network_orchestrator.js  price_stabilizer.js  resource_manager.js  threat_detector.js
backend/: package.json
cloud_integration/: __init__.py  aws_lambda_handler.py  azure_iot_hub.py  cloud_computing.py  cloud_connector.py  cloud_storage.py  google_cloud_storage.py  kafka_producer.py
cloud_management/: __init__.py  aws_cloudformation.py  azure_resource_manager.py  cloud_monitoring.py  cloud_provisioning.py  cloud_scaling.py  google_cloud_deployment_manager.py  kubernetes_deployment.py
config/: config.json  config.py  config.yaml  constants.js  data-processing.yml  data-storage.yml  device-management.yml  dynamic_config.json  genesis.json  network.js  (+6 more)
(+390 files in other folders)
